--- a/webapp/deploy.yml
+++ b/webapp/deploy.yml
@@ -2,26 +2,38 @@
 - name: "Apache installation using docker"
   hosts: prod
   become: true
+  #vars:
+  #  ansible_sudo_pass: admin
   pre_tasks:
-  - name: Install EPEL repo
-    package: name=epel-release state=present
-    when: ansible_distribution == 'CentOS'
+    - name: Install some package
+      package: name= '{{ item }}' state=present
+      when: ansible_distribution == 'CentOS'
+      loop:
+        - epel-release
+        - wget
+        - git
 
-  - name: download pip script
-    get_url:
-      url: https://bootstrap.pypa.io/pip/2.7/get-pip.py
-      dest: /tmp/get-pip.py
+    - name: download pip script
+      get_url:
+        url: https://bootstrap.pypa.io/pip/2.7/get-pip.py
+        dest: /tmp/get-pip.py
 
-  - name: install python-pip
-    command: python2.7 /tmp/get-pip.py
+    - name: install python-pip
+      command: python2.7 /tmp/get-pip.py
 
-  - name: Install docker python
-    pip: name=docker-py
+    - name: Install docker python
+      pip: name=docker-py
   
   tasks:
-  - name: Create a apache container
-    docker_container:
-      name: webapp
-      image: httpd
-      ports:
-        - "80:80"
+    - name: copy website file template
+      template:
+        src: ../templates/index.html.j2
+        dest: /home/admin/index.html
+    - name: Create a apache container
+      docker_container:
+        name: webapp
+        image: httpd
+        ports:
+          - "80:80"
+        volumes:
+          - /home/admin/index.html:/usr/local/apache2/htdocs/index.html
